# ata.ai

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/commands/: analisar-reuniao.md
.claude/skills/agenda-proposta/: SKILL.md
.claude/skills/analisar-1on1/: SKILL.md
.claude/skills/analisar-decisoes/: SKILL.md
.claude/skills/gerar-slides/: SKILL.md
.claude/templates/: README.md  executivo-clean.html  minimalista-editorial.html  retrospectiva-warm.html  tecnico-denso.html
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  db.py  deps.py  main.py  security.py  seed.py
backend/app/models/: __init__.py  job.py  provider_credential.py  user.py  whisper_benchmark.py
backend/app/routers/: artifacts.py  auth.py  events.py  jobs.py  settings.py  whisper.py
backend/app/schemas/: auth.py  jobs.py  settings.py
backend/app/services/: benchmark.py  ffprobe.py  storage.py  whisper_runner.py
backend/app/services/analysis/: __init__.py  anthropic_provider.py  base.py  claude_cli_provider.py  openai_provider.py  openrouter_provider.py  prompts.py  schemas.py
backend/app/services/renderer/: dashboard.py  markdown.py
backend/app/workers/: main.py  pipeline.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/tests/integration/: conftest.py  test_auth.py  test_benchmark.py  test_settings.py
backend/tests/unit/: test_dashboard_renderer.py  test_markdown_renderer.py  test_security.py  test_storage.py
frontend/: next.config.mjs  package.json  tailwind.config.ts
(+18 files in other folders)
